<resources>
    <string name="app_name">Ether Tracker</string>
    <string name="network_error">Oops! Could not connect to network</string>

    <!-- HomeFragment -->
    <string name="fragment_home_title">Tracker</string>
    <string name="fragment_home_change_text">Change:</string>
    <string name="fragment_home_change">%1$s%%</string>
    <string name="fragment_home_source">Source: %1$s</string>
    <string name="fragment_home_price">Price:</string>
    <string name="fragment_home_price_value">$%1$s</string>
    <string name="fragment_home_price_change_from_buying">From Buying:</string>
    <string name="fragment_home_donation"><u>Donate to the developer?</u></string>
    <string name="fragment_home_donation_link">https://github.com/olivierg13/EtherTracker/blob/master/DONATION.md</string>

    <!-- SettingsFragment -->
    <string name="fragment_settings_title">Settings</string><string name="fragment_home_buying_value">Choose your buying value</string>
    <string name="fragment_settings_persistent_notification">Enable persistent notification</string>
    <string name="fragment_settings_source">Choose the source:</string>
    <string name="fragment_settings_polionex">Polionex</string>
    <string name="fragment_settings_coinmarketcap">CoinMarketCap</string>
    <string name="fragment_settings_kraken">Kraken</string>
    <string name="fragment_settings_save">Save</string>

</resources>
